fixed phenogrid layout bugs

--- a/widgets/phenogrid/css/phenogrid.css
+++ b/widgets/phenogrid/css/phenogrid.css
@@ -139,7 +139,7 @@
 
 #sort_div {
     float: left;
-    width:150px;
+    width:180px;
 }
 #calc_div {
         float: left;
